# tgtui

./: .gitignore  README.md  SECURITY.md  pyproject.toml  requirements.txt
scripts/: install.ps1  install.sh
telegram_textual_tui/: __init__.py  __main__.py  app.py
telegram_textual_tui/ansi_renderer/: Cargo.toml  pyproject.toml
telegram_textual_tui/ansi_renderer/src/: lib.rs
telegram_textual_tui/ascii_tool/: Cargo.toml  pyproject.toml
telegram_textual_tui/ascii_tool/src/: lib.rs
telegram_textual_tui/core/: avatars.py  client.py  config.py  exceptions.py
telegram_textual_tui/tui/: app.py
telegram_textual_tui/tui/config/: keymap.py
telegram_textual_tui/tui/controllers/: chat_controller.py  history_controller.py  message_controller.py
telegram_textual_tui/tui/screens/: login.py  main.py  profile.py
telegram_textual_tui/tui/widgets/: ansi_image.py  ascii_image.py  chat_list.py  chat_tabs.py
telegram_textual_tui/utils/: formatters.py
