[project]
name = "telegram-textual-tui"
version = "0.1.0"
description = "Telegram TUI client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "telethon",
    "textual",
    "rich",
    "python-dotenv",
    "typer",
]

[project.scripts]
tgt = "telegram_textual_tui.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
