[project]
name = "telegram-textual-tui"
version = "0.1.0"
description = "Telegram TUI client"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "telethon>=1.36,<2.0",
    "textual>=0.86,<2.0",
    "rich>=13.7",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
]

[project.scripts]
tgt = "telegram_textual_tui.app:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
