[package]
name = "ansi_render"
version = "0.1.0"
edition = "2021"

[lib]
name = "ansi_render_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
once_cell = "1.21.3"
pyo3 = { version = "0.21", features = ["extension-module"] }

# Pin versions that you already proved working in your build logs
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
gif = "0.13.3"
rusttype = "0.9.3"
rayon = "1.11.0"
